# eyMate

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build_model.py  eyMate.toml  requirements.txt  run
.github/workflows/: pre-commit.yml  publish.yml  python-publish.yml  rust.yml
cli/: Cargo.toml  prebuild
cli/src/: main.rs
pam/: Cargo.toml
pam/src/: lib.rs
prebuild/: README.md  vggface2.pt
recognition/: Cargo.toml
recognition/src/: config.rs  lib.rs  paths.rs
src/: config.rs  detection.rs  lib.rs  main.rs  pam.rs  paths.rs  recognition.rs
