[package]
name = "eyMate"
description = "A linux face recognition like Windows Hello or Howdy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = "4.5.27"
figment = { version = "0.10", features = ["toml"] }
opencv = { version = "0.94.2", features = ["clang-runtime"] }
pamsm = "0.5.5"
serde = "1.0.218"
tch = "0.19.0"
toml = "0.8.20"
whoami = "1.5.2"
