[package]
name = "eymate"
authors = ["LDprg"]
description = "A linux face recognition like Windows Hello or Howdy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LDprg/eyMate"
version = "0.1.0"
edition = "2024"

[package.metadata.aur]
depends = ["python-pytorch", "python-torchvision", "python-gobject", "opencv"]
files = [
  [
    "prebuild/vggface2.pt",
    "/usr/share/eymate/vggface2.pt",
  ],
  [
    "target/release/libpam_eymate.so",
    "/usr/lib/security/libpam_eymate.so",
  ],
]

[package.metadata.deb]
maintainer = "LDprg"
copyright = "2025, LDprg"
license-file = ["LICENSE"]
assets = [
  [
    "target/release/eymate",
    "/usr/bin/eymate",
    "755",
  ],
  [
    "prebuild/vggface2.pt",
    "/usr/share/eymate/vggface2.pt",
    "755",
  ],
  [
    "target/release/libpam_eymate.so",
    "/usr/lib/security/libpam_eymate.so",
    "755",
  ],
]

[package.metadata.generate-rpm]
requires = ["python3-torch", "python3-torchvision", "python3-gobject", "opencv"]
assets = [
  { source = "target/release/eymate", dest = "/usr/bin/eymate", mode = "755" },
  { source = "prebuild/vggface2.pt", dest = "/usr/share/eymate/vggface2.pt", mode = "755" },
  { source = "target/release/libpam_eymate.so", dest = "/usr/lib/security/libpam_eymate.so", mode = "644" },
]

[lib]
name = "pam_eymate"
crate-type = ["cdylib"]
path = "./src/lib.rs"

[[bin]]
name = "eymate"
path = "./src/main.rs"

[dependencies]
whoami = "1.5.2"
clap = "4.5.31"
anyhow = "1.0.97"
figment = { version = "0.10.19", features = ["toml"] }
opencv = { version = "0.94.2", features = ["clang-runtime"] }
serde = "1.0.218"
tch = "0.19.0"
toml = "0.8.20"
pamsm = { version = "0.5.5", features = ["libpam"] }
