[package]
name = "eymate-cli"
description = "A linux face recognition like Windows Hello or Howdy"
repository = "https://github.com/LDprg/eyMate"
version = "0.1.0"
edition = "2024"

[dependencies]
whoami = "1.5.2"
eymate-recognition = { path = "../recognition", version = "0.1" }
clap = "4.5.31"
anyhow = "1.0.97"
figment = { version = "0.10.19", features = ["toml"] }
