[package]
name = "eymate-pam"
description = "A linux face recognition like Windows Hello or Howdy"
repository = "https://github.com/LDprg/eyMate"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pamsm = { version = "0.5.5", features = ["libpam"] }
eymate-recognition = { path = "../recognition", version = "0.1" }
