[package]
name = "eymate-recognition"
description = "A linux face recognition like Windows Hello or Howdy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LDprg/eyMate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
figment = { version = "0.10.19", features = ["toml"] }
opencv = { version = "0.94.2", features = ["clang-runtime"] }
serde = "1.0.218"
tch = "0.19.0"
toml = "0.8.20"
